// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component test suite snapshot test suite matches danger snapshot 1`] = `
<button
  className="button button__danger"
  disabled={false}
  onClick={[Function]}
>
  Test label
</button>
`;

exports[`Button component test suite snapshot test suite matches default snapshot 1`] = `
<button
  className="button button__default"
  disabled={false}
  onClick={[Function]}
>
  Test label
</button>
`;

exports[`Button component test suite snapshot test suite matches default snapshot with full width 1`] = `
<button
  className="button button__isFull button__default"
  disabled={false}
  onClick={[Function]}
>
  Test label
</button>
`;

exports[`Button component test suite snapshot test suite matches warning snapshot 1`] = `
<button
  className="button button__warning"
  disabled={false}
  onClick={[Function]}
>
  Test label
</button>
`;
